Fix no embed overflow

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -14,6 +14,10 @@ div.grid-row {
   width: 100%;
 }
 
+div.container div.grid-row {
+  flex-wrap: wrap;
+}
+
 img.preview {
   width: 100%;
   height: auto;
